misc/envoy.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
    - name: grpc_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: msg_lake
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: msg_lake
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/MsgLake/Subscribe" }
                          route:
                            cluster: agents
                            timeout: 0s
                            idle_timeout: 0s
                        - match: { prefix: "/" }
                          route: { cluster: agents, timeout: 15s }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: agents
      cluster_type:
        name: envoy.clusters.dns
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
          dns_lookup_family: V4_ONLY
          dns_refresh_rate: 2s
          all_addresses_in_single_endpoint: false
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      common_lb_config:
        healthy_panic_threshold: { value: 0 }
        ignore_new_hosts_until_first_hc: true
      load_assignment:
        cluster_name: agents
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: agent, port_value: 8080 }
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      health_checks:
        - timeout: 1s
          interval: 2s
          unhealthy_threshold: 1
          healthy_threshold: 1
          grpc_health_check:
            service_name: MsgLake
